# signalforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: main.py  pyproject.toml  run.py  signalforge.spec
backend/src/signalforge/: connections.py  database.py  llm_client.py  main.py  mcp_server.py  models.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  constants.ts  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: AlignmentPanel.tsx  ConnectionsPanel.tsx  DailyGrid.tsx  EvidenceBankPanel.tsx  Onboarding.tsx  PriorityContextPanel.tsx  Sidebar.tsx  StaffDimensionsPanel.tsx  StartupScreen.tsx  TrendsPanel.tsx  WeekHeader.tsx  WeekNav.tsx  WeeklySynthesisPanel.tsx  WorkOSView.tsx
scripts/: prepare-binaries.sh
